# ProFed

./: .gitignore  pyproject.toml
docs/: components.md
scripts/: bootstrap.sh  run-tests.sh  watch-tests.sh
src/profed/: __main__.py
src/profed/components/api/: __init__.py  app.py  http.py  identity.py  projections.py  storage.py
src/profed/components/api/models/: activity_streams.py  actor.py  ordered_collection.py
src/profed/components/api/projections/: actor.py  inbox.py  outbox.py  users.py  webfinger.py
src/profed/components/api/routers/: actor.py  outbox.py  well_known.py
src/profed/components/api/services/: actor.py  outbox.py  webfinger.py
src/profed/components/api/storage/: actor.py  webfinger.py
src/profed/core/: component_manager.py
src/profed/core/config/: component_parser.py
src/profed/core/message_bus/: __init__.py
src/profed/core/message_bus/postgresql/: __init__.py  snapshot.py  subscriber.py  topic.py
src/profed/topics/: __init__.py  activities_topic.py
tests/components/api/: test_actor_projection_events.py  test_actor_service.py  test_actor_storage.py  test_inbox_projection.py  test_inbox_storage.py  test_outbox_endpoint.py  test_outbox_projection.py  test_webfinger.py  test_webfinger_event_processing.py  test_webfinger_projection.py  test_webfinger_storage.py
tests/core/: test_component_manager.py  test_config.py  test_message_bus.py
tests/core/message_bus/postgresql/: fake_asyncpg.py  test_gaps.py
